# aws-meetup-2022-11-08

./: .pre-commit-config.yaml  LICENSE.md  Makefile  README.md  pyproject.toml  samconfig.toml  template.yml
src/rules/: S3Bucket.guard
tests/rules/: S3Bucket_tests.yaml
